objects/blng__GLTreatment__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__CreditGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__GLAccount__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>GL Treatments</relationshipLabel>
        <relationshipName>CreditGLTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__GLAccount__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>GL Treatments</relationshipLabel>
        <relationshipName>DebitGLTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>GL Treatments</relationshipLabel>
        <relationshipName>LegalEntityGLTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <label>GL Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__GLRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>GL Treatments</relationshipLabel>
        <relationshipName>GLTreatments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GL Treatment</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>